# FactPattern

./: .gitignore  FactPattern.sln  README.md
Fact/: CMakeLists.txt  Fact.vcxproj  Fact.vcxproj.filters  Test.h  def.h  hello.fact  layout.c  layout.h  main.cpp  runtime.c  runtime.h  vcproj2cmake.ps1
Fact/Debug/: Fact.exe.recipe  FactVM.exe.recipe  runtime.obj.enc  testencoding.obj.enc
Fact/Debug/Fact.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
Fact/Fact/: Fact.vcxproj
Fact/ads/: List.c  Type1.h
Fact/ads1/: Encoding.h  Link.c  List.h  Set.h  String.c
Fact/cmake/: Makefile
Fact/expressions/: Expression.h
Fact/io/: stream.h
Fact/loggers/: CLogger.cpp  CLogger.h  CMakeLists.txt  Logger.c  Logger.h  TLogger.c  TLogger.h  loggers_module.c  loggers_module.h
Fact/memories/: AlignedMemory.c  AlignedMemory.h  GCMemory.c  GCMemory.h  Memory.c  Memory.h  TAlignedMemory.c  TAlignedMemory.h  TGCMemory.c  TGCMemory.h  TMemory.c  TMemory.h  memories_module.c  memories_module.h
Fact/modules/: TTypeBuilder.c  TTypeBuilder.h
Fact/primes/: Array.c  Array.h  Encoding.h  Link.c  Link.h  List.c  List.h  Set.c  Set.h  String.c  String.h  TArray.c  TArray.h  TInt.c  TInt.h  TList.c  TList.h  TString.c  TString.h  TType.c  TType.h  primes_module.c  primes_module.h
Fact/reflections/: Class.h  Function.h
Fact/reflections1/: Module.h  Struct.h
Fact/tests/: TestArray.h  TestLink.c  TestLink.h  TestList.c  TestList.h  TestMemory.c  TestMemory.h  TestRuntime.c  TestRuntime.h
Fact/types/: TSet.h  TStream.c  TStream.h  types_module.c  types_module.h
Fact/types1/: TList.h  TMemory.h  TStream.c  TStream.h  TStruct.h
(+224 files in other folders)
